@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,11 +30,13 @@ import java.util.Map;
 /**
  * The management interface for the thread system of the Java virtual machine.
  *
- * <p> {@code ThreadMXBean} supports monitoring and management of <em>live
- * platform threads</em> in the Java virtual machine. Platform threads are
+ * <p> {@code ThreadMXBean} supports monitoring and management of
+ * <a href="{@docRoot}/java.base/java/lang/Thread.html#platform-threads">
+ * platform threads</a> in the Java virtual machine. Platform threads are
  * typically mapped to kernel threads scheduled by the operating system.
- * {@code ThreadMXBean} does not support monitoring or management of {@linkplain
- * Thread#isVirtual() virtual threads}.
+ * {@code ThreadMXBean} does not support monitoring or management of
+ * <a href="{@docRoot}/java.base/java/lang/Thread.html#virtual-threads">
+ * virtual threads</a>.
  *
  * <p> A Java virtual machine has a single instance of the implementation
  * class of this interface.  This instance implementing this interface is
@@ -55,10 +57,10 @@ import java.util.Map;
  * {@link PlatformManagedObject#getObjectName} method.
  *
  * <h2>Thread ID</h2>
- * Thread ID is a positive long value returned by calling the
- * {@link java.lang.Thread#getId} method for a thread.
- * The thread ID is unique during its lifetime.  When a thread
- * is terminated, this thread ID may be reused.
+ * Thread ID is a positive long value returned by calling the thread's
+ * {@link Thread#threadId() threadId()} method.
+ * The thread ID is unique during its lifetime.  When the thread terminates,
+ * its thread ID may be reused.
  *
  * <p> Some methods in this interface take a thread ID or an array
  * of thread IDs as the input parameter and return per-thread information.
@@ -407,7 +409,7 @@ public interface ThreadMXBean extends PlatformManagedObject {
      * This is a convenience method for local management use and is
      * equivalent to calling:
      * <blockquote><pre>
-     *   {@link #getThreadCpuTime getThreadCpuTime}(Thread.currentThread().getId());
+     *   {@link #getThreadCpuTime getThreadCpuTime}(Thread.currentThread().threadId());
      * </pre></blockquote>
      *
      * @return the total CPU time for the current thread if CPU time
@@ -434,7 +436,7 @@ public interface ThreadMXBean extends PlatformManagedObject {
      * This is a convenience method for local management use and is
      * equivalent to calling:
      * <blockquote><pre>
-     *   {@link #getThreadUserTime getThreadUserTime}(Thread.currentThread().getId());
+     *   {@link #getThreadUserTime getThreadUserTime}(Thread.currentThread().threadId());
      * </pre></blockquote>
      *
      * @return the user-level CPU time for the current thread if CPU time
