@@ -29,14 +29,6 @@
  * @run testng/othervm/timeout=300 --enable-preview -Djdk.useDirectRegister NioChannels
  */
 
-/**
- * @test
- * @requires (os.family == "windows")
- * @compile --enable-preview -source ${jdk.version} NioChannels.java
- * @run testng/othervm/timeout=300 --enable-preview
- *     -Djdk.PollerProvider=sun.nio.ch.WSAPollPollerProvider NioChannels
- */
-
 import java.io.Closeable;
 import java.io.IOException;
 import java.net.DatagramPacket;
@@ -641,14 +633,24 @@ public class NioChannels {
      * Creates a loopback connection
      */
     static class Connection implements Closeable {
-        private final ServerSocketChannel ssc;
         private final SocketChannel sc1;
         private final SocketChannel sc2;
         Connection() throws IOException {
             var lh = InetAddress.getLoopbackAddress();
-            this.ssc = ServerSocketChannel.open().bind(new InetSocketAddress(lh, 0));
-            this.sc1 = SocketChannel.open(ssc.getLocalAddress());
-            this.sc2 = ssc.accept();
+            try (var listener = ServerSocketChannel.open()) {
+                listener.bind(new InetSocketAddress(lh, 0));
+                SocketChannel sc1 = SocketChannel.open();
+                SocketChannel sc2 = null;
+                try {
+                    sc1.socket().connect(listener.getLocalAddress(), 10_000);
+                    sc2 = listener.accept();
+                } catch (IOException ioe) {
+                    sc1.close();
+                    throw ioe;
+                }
+                this.sc1 = sc1;
+                this.sc2 = sc2;
+            }
         }
         SocketChannel channel1() {
             return sc1;
@@ -658,9 +660,8 @@ public class NioChannels {
         }
         @Override
         public void close() throws IOException {
-            if (ssc != null) ssc.close();
-            if (sc1 != null) sc1.close();
-            if (sc2 != null) sc2.close();
+            sc1.close();
+            sc2.close();
         }
     }
 
